--- a/_posts/2019-04-01-plat1.md
+++ b/_posts/2019-04-01-plat1.md
@@ -1,14 +1,14 @@
 ---
 layout: post
-title: 三大平台介绍之：计及区域特征的聚合控制模式优选平台
-date: 2019-5-01 04:00:00
+title: 三大平台介绍之一：计及区域特征的聚合控制模式优选平台
+date: 2019-4-01 04:00:00
 author: hanuman
 ---
 
 ## 计及区域特征的聚合控制模式优选平台
 该平台所要解决的问题是，针对不同地区、不同用户、以及用电习惯等数据，计算出最佳的智能终端控制模式。这样，后期在系统进行电力聚合控制时，不会对各类用户的体验度造成较大变动。在用户不知不觉中就实现了电力负荷的聚合。该平台将能够提升原有负荷聚合潜力15%以上。
 该平台整合地理信息、人口结构和用能特性三组数据，将分布分析、相关性分析与基于局部特征值密度的聚类算法相结合，并利用核心团队成员前期已搜集的试点实验数据与问卷调查中不同区域用户对于负荷聚合控制、补贴方法等的偏好，从多源异构数据中筛选决定用户偏好的关键特征。
-奕星能源科技提出的计及区域特征的聚合控制模式如下图7所示。以决定用户偏好的关键特征为基础，针对目标区域，刻画包括温度调节、关断调节、占空比调节、消息通知等在内不同控制方案下用户行为的集群画像；并针对各控制方案，通过回归模型定量分析、研究用户对原有功能影响容忍度、价格敏感度等关键因素；进而评估在目标区域推行各类负荷聚合方案对于运行成本、用户接入率与满意度等方面的影响。
+奕星能源科技提出的计及区域特征的聚合控制模式如下图所示。以决定用户偏好的关键特征为基础，针对目标区域，刻画包括温度调节、关断调节、占空比调节、消息通知等在内不同控制方案下用户行为的集群画像；并针对各控制方案，通过回归模型定量分析、研究用户对原有功能影响容忍度、价格敏感度等关键因素；进而评估在目标区域推行各类负荷聚合方案对于运行成本、用户接入率与满意度等方面的影响。
 
 ### 平台示意图
-<amp-img src="{{ site.baseurl }}assets/images/plat1.jpg" width="656" height="400" layout="responsive" alt="" class="mb3"></amp-img>
+<amp-img src="{{ site.baseurl }}assets/images/plat1.jpg" width="600" height="900" layout="responsive" alt="" class="mb3"></amp-img>
